# scarecrow

./: .coverage  .gitignore  .travis.yml  README.md  pyproject.toml
scarecrow/: core.py
tests/: conftest.py  test_core.py  test_scarecrow.py
