[tool.poetry]
name = "scarecrow"
version = "0.2.0"
description = "Fake data...from real data!"
authors = ["Drew O'Kane <deokane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ipython = "^7.5"
scipy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
